--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello world
+<html>
+	<head>
+		<title> Eoin </title>
+		<link rel="icon" href="./favicon.ico">
+	</head>
+	<body style="font-family:sans-serif;">
+		<div style="max-width:800px;margin:auto;margin-top:50px">
+			<h1 style="font-size:40;"> Hi, I'm Eoin! </h1>
+			
+			<h2> Projects </h2>
+			<ul>
+				<li><a href="http://redistrict.eoinbreen.com"> Redistricting Web App </a></li>
+				<li><a href="http://www.github.com/ebreen1/Tetris"> Tetris made with C and SDL3</a> (work in progress) </li>
+			</ul>
+
+			<h2> Links </h2>
+			<ul>
+				<li> <a href="http://www.linkedin.com/in/eoin-breen"> LinkedIn </a> </li>
+				<li> <a href="http://www.github.com/ebreen1"> GitHub </a> </li>
+			</ul>
+		</div>
+	</body>
+</html>
